# fenex_chess_demo

./: .gitignore  Cargo.toml  README.md  build-wasm.bat  build-wasm.sh  build.ps1  chess-wasm.js  debug_check.html  index.html  styles.css
pkg/: README.md  fenex.js  fenex_bg.wasm  fenex_chess_demo.js  fenex_chess_demo_bg.wasm  package.json
src/: lib.rs  wasm.rs
