[package]
name = "fenex-chess-demo"
version = "0.1.0"
edition = "2021"
authors = ["Small San <DefinitelyNotSmallSan@gmail.com>"]
description = "Interactive web demo for the Fenex chess library"
repository = "https://github.com/Smallsan/fenex-chess-demo"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
fenex = "0.1.9"  # Use the latest version from crates.io
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]
